--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </a>
   </center>
 
-  <p style="text-allign:center;"> Imagem e link provisorios </p>
+  <p style="text-allign:center;"> Imagem e link provisorios. </p>
   <p style="text-allign:center;"> Atualizacao teste </p>
 
 <body>
